logs/to_posgrest_v4.2/create_postgres_table_user/2023-03-20T15:35:27.529831+00:00/1.log
[2023-03-20 15:35:46,257] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v4.2.create_postgres_table_user manual__2023-03-20T15:35:27.529831+00:00 [queued]>
[2023-03-20 15:35:46,297] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v4.2.create_postgres_table_user manual__2023-03-20T15:35:27.529831+00:00 [queued]>
[2023-03-20 15:35:46,298] {taskinstance.py:1238} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 15:35:46,299] {taskinstance.py:1239} INFO - Starting attempt 1 of 2
[2023-03-20 15:35:46,299] {taskinstance.py:1240} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 15:35:46,339] {taskinstance.py:1259} INFO - Executing <Task(PostgresOperator): create_postgres_table_user> on 2023-03-20 15:35:27.529831+00:00
[2023-03-20 15:35:46,344] {standard_task_runner.py:52} INFO - Started process 11372 to run task
[2023-03-20 15:35:46,351] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'to_posgrest_v4.2', 'create_postgres_table_user', 'manual__2023-03-20T15:35:27.529831+00:00', '--job-id', '59', '--raw', '--subdir', 'DAGS_FOLDER/to_postgresql.py', '--cfg-path', '/tmp/tmp0xgxvago', '--error-file', '/tmp/tmp8p4m85q6']
[2023-03-20 15:35:46,354] {standard_task_runner.py:77} INFO - Job 59: Subtask create_postgres_table_user
[2023-03-20 15:35:46,656] {logging_mixin.py:109} INFO - Running <TaskInstance: to_posgrest_v4.2.create_postgres_table_user manual__2023-03-20T15:35:27.529831+00:00 [running]> on host 0b4cdb459521
[2023-03-20 15:35:47,026] {taskinstance.py:1426} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=sakabuana31
AIRFLOW_CTX_DAG_ID=to_posgrest_v4.2
AIRFLOW_CTX_TASK_ID=create_postgres_table_user
AIRFLOW_CTX_EXECUTION_DATE=2023-03-20T15:35:27.529831+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-20T15:35:27.529831+00:00
[2023-03-20 15:35:47,111] {base.py:79} INFO - Using connection to: id: postgres_localhost. Host: host.docker.internal, Port: 5432, Schema: final, Login: ***, Password: ***, extra: {}
[2023-03-20 15:35:47,202] {dbapi.py:225} INFO - Running statement: 
            create table if not exists user (
                user_id text PRIMARY KEY,
                name text,
                review_count text,
                useful int,
                funny int,
                cool int,
                elite int,
                friends text,
                fans text,
                average_stars int,
                yelping_since_values date
            ) 
        , parameters: None
[2023-03-20 15:35:47,209] {taskinstance.py:1700} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "user"
LINE 2:             create table if not exists user (
                                               ^

[2023-03-20 15:35:47,310] {taskinstance.py:1277} INFO - Marking task as UP_FOR_RETRY. dag_id=to_posgrest_v4.2, task_id=create_postgres_table_user, execution_date=20230320T153527, start_date=20230320T153546, end_date=20230320T153547
[2023-03-20 15:35:47,355] {standard_task_runner.py:92} ERROR - Failed to execute job 59 for task create_postgres_table_user
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "user"
LINE 2:             create table if not exists user (
                                               ^

[2023-03-20 15:35:47,375] {local_task_job.py:154} INFO - Task exited with return code 1
[2023-03-20 15:35:47,603] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
